--- a/Site/index.htm
+++ b/Site/index.htm
@@ -1,41 +1,167 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+<html>
+	<head>
+		<!--Import Google Icon Font-->
+		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+			<!--Import materialize.css-->
+			<link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+			<link rel="stylesheet" href="css/font-awesome.min.css" />
+			<link rel="stylesheet" href="css/main.css" />
+			<!--Let browser know website is optimized for mobile-->
+			<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		</head>
+		<body>
+			<nav>
+				<div class="nav-wrapper">
+					<a href="#!" class="brand-logo">Logo</a>
+					<a href="#" data-activates="mobile-demo" class="button-collapse">
+						<i class="material-icons">menu</i>
+					</a>
+					<ul class="right hide-on-med-and-down">
+						<li>
+							<a href="#modal1">
+								<i class="material-icons">add</i>
+							</a>
+						</li>
+					</ul>
+					<ul class="side-nav" id="mobile-demo">
+						<li>
+							<a href="#modal1">
+								<i class="material-icons">add</i>Adicionar tarefa</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+			<ul id="tasks">
+				<li style="opacity: 0">
+					<div class="row">
+						<div class="col s12 m6 offset-m3">
+							<div class="card horizontal">
+								<div class="card-stacked">
+									<div class="card-content">
+										<div class="row">
+											<div class="col s12">
+												<p>"Lorem ipsum dolor sit amet, consectetur ad dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col s6">
+												<span>
+													<b>Data previsão início:</b> 15/01/2017</span>
+											</div>
+											<div class="col s6">
+												<span class="right">
+													<b>Data previsão início:</b> 15/01/2017</span>
+											</div>
+											<div class="col s6">
+												<span>
+													<b>Data efetiva de início:</b> 15/01/2017</span>
+											</div>
+											<div class="col s6">
+												<span class="right">
+													<b>Data efetiva de início:</b> 15/01/2017</span>
+											</div>
+											<div class="col s12" style="color: #e53935;">
+												<b>Status: &nbsp</b>
+												<span>Em aberto</span>
+											</div>
+										</div>
+									</div>
+									<div class="card-action">
+										<a class="waves-effect waves-light btn right" onclick="Materialize.toast('Tarefa finalizada', 2000, 'rounded')">
+											<i class="material-icons left">done</i>finalizar</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li style="opacity: 0">
+					<div class="row">
+						<div class="col s12 m6 offset-m3">
+							<div class="card horizontal">
+								<div class="card-stacked">
+									<div class="card-content">
+										<div class="row">
+											<div class="col s12 checked">
+												<p>"Lorem ipsum dolor sit amet, consectetur ad dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col s6">
+												<span>
+													<b>Data previsão início:</b> 15/01/2017</span>
+											</div>
+											<div class="col s6">
+												<span class="right">
+													<b>Data previsão início:</b> 15/01/2017</span>
+											</div>
+											<div class="col s6">
+												<span>
+													<b>Data efetiva de início:</b> 15/01/2017</span>
+											</div>
+											<div class="col s6">
+												<span class="right">
+													<b>Data efetiva de início:</b> 15/01/2017</span>
+											</div>
+											<div class="col s12" style="color: #26a69a;">
+												<b>Status: &nbsp </b>
+												<span>Finalizada</span>
+											</div>
+										</div>
+									</div>
+									<div class="card-action">
+										<a class="waves-effect waves-light btn red right" onclick="Materialize.toast('Tarefa reaberta', 2000, 'rounded')">
+											<i class="material-icons left">power_settings_new</i>reabrir</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</li>
+			</ul>
+			<div id="modal1" class="modal bottom-sheet">
+				<div class="modal-content">
+					<h4>Adicionar nota tarefa</h4>
+					<div class="row">
+						<div class="col s12">
+							<div class="row">
+								<div class="input-field col s6">
+									<input id="last_name" type="text" class="validate" />
+									<label for="last_name">Descrição</label>
+								</div>
+								<div class="input-field col s3">
+									<input id="last_name" type="text" class="validate" />
+									<label for="last_name">Last Name</label>
+								</div>
+								<div class="input-field col s3">
+									<input type="date" class="datepicker">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Adicionar</a>
+				</div>
+			</div>
+			<!--Import jQuery before materialize.js-->
+			<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"> </script>
+			<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"> </script>
+			<script type="text/javascript" src="js/vue.js"> </script>
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
- <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Todo.Chiro</a>
-    </div>
-  </nav>
-  	      <div class="container">
+			<script type="text/javascript">
+				$( document ).ready(function(){
+					$(".button-collapse").sideNav();
 
-         <div class="row">
-        <div class="col s12 m6 offset-m3">
-    <div class="card horizontal">
-      <div class="card-stacked">
-        <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-        </div>
+					Materialize.showStaggeredList('#tasks');
 
-        <div class="card-action">
-          <a href="#">This is a link</a>
-        </div>
-      </div>
-    </div>
-        </div>
-      </div>
-            </div>
-      <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.js"></script>
-	  <script type="text/javascript" src="js/vue.js"></script>
-    </body>
-  </html>
+					$('.modal').modal();
+					
+					$('.datepicker').pickadate({
+						selectMonths: true // Creates a dropdown to control month
+				    });
+				});
+			</script>
+		</body>
+	</html>
